# lattice-surgery-compiler

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Pipfile  README.md  ancilla_patch_routing.py  ancilla_region_routing.py  circuit.py  compile_lattice_view.py  compiler_options.py  conditional_operation_control.py  dependency_graph.py  dependency_tree.py  dev-requirements.txt  index.html  index.mak  lattice_surgery_compilation_pipeline.py  lattice_surgery_computation_composer.py  lattice_view.mak  lattice_view.py  logical_lattice_ops.py  logical_patch_state_simulation.py  patches.py  pauli_rotations_to_lattice_surgery.py  pyproject.toml  qiskit_opflow_utils.py  qubit_state.py  requirements.txt  rotation.py  segmented_qasm_parser.py  setup.cfg  sparse_lattice_to_array.py  topological_assembly.py  transversal_op.py  utils.py  (+1 more)
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: label.yml  test.yml
assets/: cached_phase_rotation_approximations.txt  circuit_latex_render.mak  qft3.qasm  reversible.qasm  teleportation.qasm  teleportation_prep.qasm
assets/demo_circuits/: bell_pair.qasm
debug/: debug_apply_logical_operation.py  debug_arbitrary_rotation.py  debug_basic_dependency_graph.py  debug_basic_dependency_graphy.py  debug_bell_pair.py  debug_cant_allocate_ancilla.py  debug_circuit_file_to_view.py  debug_circuit_render_ascii.py  debug_circuit_render_latex.py  debug_compilation_pipeline.py  debug_compress_approximations.py  debug_contract_sk_result.py  debug_gui_consecutive_ops.py  debug_lattice_view.py  debug_litinski_transform_seminar_example.py  debug_litinski_transform_takes_up_space.py  debug_litinski_y_op_removal_bug.py  debug_logical_lattice_ops_dag.py  debug_ls_instructions.py  debug_manual_qasm_parse.py  debug_parse_qasm.py  debug_pauli_rotations_to_lattice_surgery.py  debug_phase_loss_in_separation.py  debug_pi_over_eight_routing.py  debug_profiling.py  debug_qentiana_integration.py  debug_qiskit_operator_flow.py  debug_qubit_ordering_separation.py  debug_routing_collision.py  debug_simulation_separations.py  debug_simulation_with_separated_states.py  debug_state_separator.py  debug_teleportation_example.py  debug_to_basic_form_compress.py  debug_y_measurement.py  experiment_patch_simulation.py  experiment_qiskit_operator_flow.py  util.py
docs/: requirements.txt
docs/source/: conf.py  index.md
docs/source/api/: index.md  patches.md  pauli_rotations.md
docs/source/guide/: index.md  setup.md
lsqecc/: utils.py
lsqecc/circuit/: __init__.py  circuit.py  rotation.py  segmented_qasm_parser.py
lsqecc/lattice_array/: __init__.py  sparse_lattice_to_array.py  visual_array_cell.py
lsqecc/logic_lattice_ops/: dependency_graph.py  logical_lattice_ops.py  visual_array_cell.py
lsqecc/logical_lattice_ops/: __init__.py  dependency_graph.py  logical_lattice_ops.py  visual_array_cell.py
lsqecc/patches/: __init__.py  ancilla_region_routing.py  lattice_surgery_computation_composer.py  patches.py
lsqecc/pauli_rotations/: __init__.py  circuit.py  rotation.py  segmented_qasm_parser.py
lsqecc/pipeline/: __init__.py  json_pipeline.py  lattice_surgery_compilation_pipeline.py
lsqecc/simulation/: __init__.py  conditional_operation_control.py  logical_patch_state_simulation.py  qiskit_opflow_utils.py  qubit_state.py
lsqecc/stimulation/: conditional_operation_control.py  logical_patch_state_simulation.py  qiskit_opflow_utils.py
scripts/webapi/: requirements.txt
src/lsqecc/: utils.py
src/lsqecc/gates/: approximate.py  compress_rotation_approximations.py  gates.py  gates_circuit.py  gridsynth_interface.py  parse.py  pi_over_2_to_the_n_rz_gate_approximations.py
src/lsqecc/lib/: .gitignore  CMakeLists.txt
src/lsqecc/lib/include/lsqecc/logical_lattice_ops/: logical_lattice_ops.hpp
src/lsqecc/lib/include/lsqecc/patches/: fast_patch_computation.hpp  patch_activity.hpp  patches.hpp  slice.hpp
src/lsqecc/lib/include/lsqecc/pauli_rotations/: pauli_operator.hpp
src/lsqecc/lib/src/: lsqecclib_pybind.cpp
src/lsqecc/lib/src/logical_lattice_ops/: logical_lattice_ops.cpp
src/lsqecc/lib/src/patches/: fast_patch_computation.cpp  patches.cpp  slice.cpp
src/lsqecc/lib/tests/logical_lattice_ops/: logical_lattice_ops.cpp
src/lsqecc/lib/tests/patches/: fast_patch_computation.cpp
src/lsqecc/logical_lattice_ops/: dependency_graph.py  logical_lattice_ops.py  ls_instructions.py
src/lsqecc/ls_instructions/: ls_instructions.py  ls_instructions_from_gates.py  shorthand_file_writer.py
src/lsqecc/patches/: lattice_surgery_computation_composer.py  patches.py
src/lsqecc/pauli_rotations/: circuit.py  pi_over_2_to_the_n_rz_gate_approximations.py  rotation.py  (+1 more)
tests/: rotation_test.py  util_test.py
tests/gates/: approximate_test.py  compress_rotation_approximations_test.py  gates_test.py  gates_to_circuit_test.py
tests/logical_lattice_ops/: dependency_graph_test.py  logical_lattice_ops_test.py
tests/ls_instructions/: test_ls_instructions_from_gates.py  test_shorthand_file_writer.py
tests/pauli_rotations/: circuit_test.py  generate_tests_circuit.py  rotation_test.py
tests/pipeline/: lattice_surgery_compilation_pipeline.py  lattice_surgery_compilation_pipeline_test.py
tests/resource_estimation/: llops_resource_estimator_test.py  resource_estimator_test.py
tests/simulation/: lazy_tensor_op_test.py  logical_patch_state_simulation_test.py  numpy_matrix_assertions.py  qiskit_opflow_utils_test.py
web/: WEB_README.MD  db.sqlite3  deploy.sh  manage.py  nontrivial_state.qasm
web/lattice_main/: .gitignore  VisualArrayCell.py  apps.py  forms.py  models.py  render_to_file.py  sparse_lattice_to_array.py  styles_map.py  urls.py  views.py
web/lattice_surgery_web/: asgi.py  settings.py  settings_render_to_file.py  urls.py  wsgi.py
webapi/: json_pipeline.py  local_compiler_api_server.py
webgui/: call_deploy.sh  deploy.sh  lattice_view.py  serve.py
webgui/templates/: lattice_view.mak  upload_circuit.mak
(+58 files in other folders)
