[metadata]
name = lsqecc
version = 0.1.0
description = a Python lattice-surgery based quantum error correction compiler
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://latticesurgery.com/
author = George Watkins, Alex Nguyen, Varun Seshadri, Keelan Watkins
author_email = info@latticesurgery.com
license = LGPLv2+
license_file = LICENSE
classifiers =
    Topic :: Scientific/Engineering
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent,
    Intended Audience :: Science/Research
    Natural Language :: English
    Typing :: Typed
project_urls = 
    Source = https://github.com/latticesurgery-com/lattice-surgery-compiler
    Tracker = https://github.com/latticesurgery-com/lattice-surgery-compiler/issues

[options]
packages = find:
python_requires = >=3.7
install_requires =
    qiskit>=0.24.0, <0.35.0
    pyzx>=0.6.4, <0.6.5
    igraph>=0.9.8, <0.9.10
package_dir = 
    =src
zip_safe = False
include_package_data = True
    
[options.packages.find]
where = src

[options.extras_require]
latex =
    mako>=1.1.5
